[gd_scene load_steps=65 format=3 uid="uid://c3nmqflhi6xgs"]

[ext_resource type="Script" path="res://scripts/characters/Player.gd" id="1_da072"]
[ext_resource type="Texture2D" uid="uid://bp60bta1yy5pl" path="res://assets/sprites/player/Player.png" id="1_tel1p"]
[ext_resource type="PackedScene" uid="uid://db8ae5pg4odve" path="res://scenes/state_machine/state_machine.tscn" id="3_r8wjs"]
[ext_resource type="PackedScene" uid="uid://c4x0ivbdhjm46" path="res://scenes/handlers/animation_handler.tscn" id="4_v46lm"]
[ext_resource type="PackedScene" path="res://scenes/state_machine/states/idle.tscn" id="6_o06dj"]
[ext_resource type="PackedScene" uid="uid://cmv6vqiqlvgxb" path="res://scenes/components/move_component.tscn" id="7_bjgfg"]
[ext_resource type="PackedScene" path="res://scenes/state_machine/states/move.tscn" id="7_riy0u"]
[ext_resource type="PackedScene" path="res://scenes/state_machine/states/attack.tscn" id="8_8jdh2"]
[ext_resource type="PackedScene" uid="uid://c3guamcp6bbq4" path="res://scenes/state_machine/states/die.tscn" id="9_aganp"]
[ext_resource type="PackedScene" uid="uid://b2xlkhfkawhk0" path="res://scenes/components/health_component.tscn" id="10_3nsty"]
[ext_resource type="PackedScene" uid="uid://c6rs56mdroh1e" path="res://scenes/components/attack_component.tscn" id="11_h4paf"]
[ext_resource type="Script" path="res://scripts/components/player_attack_component.gd" id="12_svvbi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_booh4"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtb2e"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bneq8"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5r2h"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee7pc"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsbex"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfpct"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_818p1"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iicd4"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdvh8"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn6qt"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h5me"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gygq8"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4aym"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oejy"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3erk"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8swg6"]
atlas = ExtResource("1_tel1p")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta5kd"]
atlas = ExtResource("1_tel1p")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehk2y"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k108a"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_elqqn"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4egh"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r347"]
atlas = ExtResource("1_tel1p")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epin7"]
atlas = ExtResource("1_tel1p")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl3ot"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu4yt"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kru6f"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfgvu"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qgl8"]
atlas = ExtResource("1_tel1p")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q65gv"]
atlas = ExtResource("1_tel1p")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ym6u"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opr75"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl37q"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll5hx"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kiaj"]
atlas = ExtResource("1_tel1p")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvqob"]
atlas = ExtResource("1_tel1p")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw5kf"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glfjv"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v07my"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmns5"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn533"]
atlas = ExtResource("1_tel1p")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj8cf"]
atlas = ExtResource("1_tel1p")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfxcv"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tc2g"]
atlas = ExtResource("1_tel1p")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rus1"]
atlas = ExtResource("1_tel1p")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dplp"]
atlas = ExtResource("1_tel1p")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qio2"]
atlas = ExtResource("1_tel1p")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32lj"]
atlas = ExtResource("1_tel1p")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpvsc"]
atlas = ExtResource("1_tel1p")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ippl7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_booh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtb2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bneq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5r2h")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee7pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsbex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfpct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_818p1")
}],
"loop": false,
"name": &"attack_h",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iicd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdvh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn6qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h5me")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gygq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4aym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oejy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3erk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8swg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta5kd")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehk2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k108a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elqqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4egh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r347")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epin7")
}],
"loop": true,
"name": &"idle_h",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl3ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu4yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kru6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfgvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qgl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q65gv")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ym6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opr75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl37q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll5hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kiaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvqob")
}],
"loop": true,
"name": &"move_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw5kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glfjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v07my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmns5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn533")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj8cf")
}],
"loop": true,
"name": &"move_h",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfxcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tc2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rus1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dplp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qio2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpvsc")
}],
"loop": true,
"name": &"move_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agooo"]
size = Vector2(8, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nn4u"]
size = Vector2(32, 16)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animations", "hitbox", "attack_hitbox", "state_machine", "move_component", "health_component", "attack_component") groups=["player"]]
collision_mask = 6
script = ExtResource("1_da072")
animations = NodePath("PlayerAnimation")
hitbox = NodePath("CollisionShape2D")
attack_hitbox = NodePath("AttackHitbox")
state_machine = NodePath("StateMachine")
move_component = NodePath("MoveComponent")
health_component = NodePath("HealthComponent")
attack_component = NodePath("AttackComponent")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ippl7")
animation = &"move_up"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_agooo")

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_7nn4u")

[node name="MoveComponent" parent="." instance=ExtResource("7_bjgfg")]

[node name="AnimationHandler" parent="." node_paths=PackedStringArray("animations") instance=ExtResource("4_v46lm")]
animations = NodePath("../PlayerAnimation")

[node name="StateMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("3_r8wjs")]
starting_state = NodePath("idle")

[node name="idle" parent="StateMachine" node_paths=PackedStringArray("move_state", "attack_state", "die_state") instance=ExtResource("6_o06dj")]
move_state = NodePath("../move")
attack_state = NodePath("../attack")
die_state = NodePath("../die")

[node name="move" parent="StateMachine" node_paths=PackedStringArray("idle_state", "attack_state", "die_state") instance=ExtResource("7_riy0u")]
idle_state = NodePath("../idle")
attack_state = NodePath("../attack")
die_state = NodePath("../die")

[node name="attack" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "die_state") instance=ExtResource("8_8jdh2")]
idle_state = NodePath("../idle")
move_state = NodePath("../move")
die_state = NodePath("../die")

[node name="die" parent="StateMachine" instance=ExtResource("9_aganp")]

[node name="HealthComponent" parent="." instance=ExtResource("10_3nsty")]
max_health = 500

[node name="AttackComponent" parent="." node_paths=PackedStringArray("player", "attack_hitbox") instance=ExtResource("11_h4paf")]
script = ExtResource("12_svvbi")
player = NodePath("..")
attack_hitbox = NodePath("../AttackHitbox")

[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]
[connection signal="direction_changed" from="StateMachine/move" to="." method="_on_move_direction_changed"]
